# KillTheZombiesFPS

./: LICENSE  Makefile  README.md
client/: CMakeLists.txt  debug  install  run
client/assets/: CMakeLists.txt
client/assets/blender/: box.blend  survivor.blend  survivor.blend1
client/assets/models/: block.mtl  survivor.mtl
client/assets/textures/: brick.png.back  sight0.png.back
client/src/: CMakeLists.txt  _clientConnector.hpp  a.out  client  client.cpp  client.hpp  clientConnec.hpp  clientConnector.cpp  clientConnector.hpp  clientconnector.hpp  connector.hpp  gamestate.hpp  main.cpp  testesem  window.cpp  window.hpp
client/src/objects/: block.cpp  block.hpp  object.cpp  object.hpp  sceneZero.cpp  sceneZero.hpp  survivor.cpp  survivor.hpp  zombie.cpp  zombie.hpp
client/src/render/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  vertex.hpp  window.cpp  window.hpp
client/src/shaders/: CMakeLists.txt  frag.glsl  vert.glsl
server/: a.out  connector.hpp  server  server.cpp
server/src/: Makefile  a.out  server  server.cpp  server_connector.hpp  server_logic.hpp  serverconnector.hpp  state_handler.hpp
shared/: game_message.hpp  game_state.hpp  gamemessage.hpp  gamestate.hpp  logger.hpp  semaphore.hpp
shared/log/: logger.hpp
src/client/: client.cpp
src/server/: server.cpp
src/shared/log/: logger.hpp
src/tests/: a.out  test_logger.cpp  test_state_serializaton.cpp
